force-app/main/default/objects/Certification__c/fields/Area_Supported_ID__c.field-meta.xml
<CustomField>
    <fullName>Area_Supported_ID__c</fullName>
    <label>Area Supported ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>