force-app/main/default/objects/Certification__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <label>Course Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>