force-app/main/default/objects/Certification__c/fields/Curriculum_Number__c.field-meta.xml
<CustomField>
    <fullName>Curriculum_Number__c</fullName>
    <description>NCR University certification course code number</description>
    <externalId>true</externalId>
    <inlineHelpText>NCR University certification course code number</inlineHelpText>
    <label>Curriculum Number</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>