force-app/main/default/objects/Certification__c/fields/Days_Valid__c.field-meta.xml
<CustomField>
    <fullName>Days_Valid__c</fullName>
    <description>The number of days from completion the certification is valid for until the expiration date is reached. 731 days is equal to to 24 months.</description>
    <inlineHelpText>The number of days from completion the certification is valid for until the expiration date is reached. 731 days is equal to to 24 months.</inlineHelpText>
    <label>Days Valid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>