force-app/main/default/objects/Certification__c/fields/Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Id__c</fullName>
    <externalId>true</externalId>
    <label>Salesforce Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>