force-app/main/default/objects/Certification__c/fields/Transcript_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Transcript_Registration_Date__c</fullName>
    <label>Transcript Registration Date</label>
    <type>DateTime</type>
</CustomField>