force-app/main/default/objects/Certification__c/fields/Transcript_Status__c.field-meta.xml
<CustomField>
    <fullName>Transcript_Status__c</fullName>
    <label>Transcript Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>